[package]
name = "rustics"
version = "0.3.0"
authors = ["bertoni"]
edition = "2021"
include = ["Cargo.toml", "src/*.rs", "README"]

license = "MIT OR BSD-2-Clause OR BSD-1-Clause"
keywords = ["monitoring", "statistics", "performance" ]
categories = ["development-tools::profiling"]
description = "simple statistic library for performance analysis"
repository = "https://github.com/jbertoni/Rustics"

[dependencies]
rand = "0.8"
