[package]
name = "rustics"
version = "1.0.2"
authors = ["bertoni"]
edition = "2021"
include = ["Cargo.toml", "src/*.rs", "README"]

license = "MIT OR BSD-2-Clause OR BSD-1-Clause"
keywords = ["monitoring", "statistics", "performance" ]
description = "simple statistic library for performance analysis"
repository = "https://github.com/jbertoni/Rustics"

[dependencies]

# rand is used only for testing
rand = "0.8"
